@@ -9,10 +9,11 @@ file such as NOTICE, LICENCE or COPYING.
 	Copyright © 1994-1999 Lucent Technologies Inc.  All rights reserved.
 	Portions Copyright © 1995-1997 C H Forsyth (forsyth@terzarima.net)
 	Portions Copyright © 1997-1999 Vita Nuova Limited
-	Portions Copyright © 2000-2007 Vita Nuova Holdings Limited (www.vitanuova.com)
+	Portions Copyright © 2000-2008 Vita Nuova Holdings Limited (www.vitanuova.com)
 	Portions Copyright © 2004,2006 Bruce Ellis
 	Portions Copyright © 2005-2007 C H Forsyth (forsyth@terzarima.net)
-	Revisions Copyright © 2000-2007 Lucent Technologies Inc. and others
+	Revisions Copyright © 2000-2008 Lucent Technologies Inc. and others
+	Portions Copyright © 2009 The Go Authors.  All rights reserved.
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
